# nexus-duet

./: .gitignore  Cargo.toml  README.md  athena  athena.env  athena.sh  auto_pilot.sh  build.sh  deploy_manager.sh  deploy_nexus.sh  devops_pulse.sh  docker-compose.yml  file_maker.py  fix_paths.sh  fusion_launch.sh  index.html  launch_omega.sh  list_models.py  main.py  nexus.sh  panic.sh  repair.py  repair_nexus.sh  start_nexus.sh  status_check.sh  termux-api_0.59.1-1_aarch64.deb  universal_ignite.sh  upgrade_omega.sh
.github/workflows/: .nexus-ops.yml.swp  .nexus-ops.yml~.swp  build.yml  nexus-ops.yml
agents/: Agent.toml  Cargo.toml  apply_arch_fix.py  calc.py  coder_gemini.py  final_cleanup.py  fix_code.py  god_mode_patch.sh  mission_log.txt  strategist_gemini.py
agents/.godmode_backup_20260102_045447/: Cargo.toml
agents/.godmode_backup_20260102_045447/src/: communication.rs  config.rs  main.rs
agents/src/: db.rs  executor.rs  main.rs  main.rs.bak.20260101_211213  task_executor.rs  validator.rs
app/: calculator_cli.py  calculator_gui.py
backend/: Cargo.tom  Cargo.toml  Cargo.toml.bak.20260102_051837  Cargo.toml.bak.20260102_051920  Dockerfile  fix_code.py  main.py  tasks.db
backend/core/: db.py  guard.py  router.py
backend/src/: main.rs  main.rs.bak.20260102_051837  main.rs.bak.20260102_051920
backend/templates/: dashboard.html
flask_chat_app/: ai_bridge.py  app.py  requirements.txt
flask_chat_app/static/: script.js  style.css
flask_chat_app/templates/: index.html
frontend/: dashboard.py
frontend/customer-portal/: index.html
frontend/customer-portal/src/: App.js
frontend/templates/: index.html
nexus-core/: Cargo.toml  nexus_stats.csv
nexus-core/src/: main.rs
nexus-duet/: AGENT.md  athena_master.py  deploy_nexus.sh  main.py
nexus-duet/agents/: coder_gemini.py  strategist_gemini.py  technician_local.py
nexus-duet/chat_room/: app.py  requirements.txt
nexus-duet/chat_room/static/: script.js  style.css
nexus-duet/chat_room/templates/: index.html
nexus-duet/memory/: nexus_history.json
nexus-duet/scripts/: protocol.py
nexus-duet/secure_login_app/: app.py  requirements.txt
nexus-duet/secure_login_app/instance/: site.db
nexus-duet/secure_login_app/templates/: base.html  dashboard.html  login.html  register.html
rust/: Cargo.toml
rust/src/: main.rs
scripts/: drift_detector.py
src/: action_handler.rs  agents.rs  main.rs  pulse_agent.rs  server.rs
