[package]
name = "nexus_singularity"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
futures-util = "0.3"
async-stream = "0.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
chrono = "0.4"
walkdir = "2"
bincode = "1.3"
async-trait = "0.1"
sled = "0.34"

[profile.release]
opt-level = 'z'      # Smallest possible binary
lto = false          # DISABLE LTO (prevents RAM spikes)
codegen-units = 1    # One thread only
strip = true         # Remove all symbols
